# auto-cpufreq

./:   .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  auto-cpufreq-installer  auto-cpufreq.conf-example  auto-cpufreq.conf-example.nix  auto-cpufreq.py  flake.nix  pyproject.toml  pyproject_cli_only.toml.txt  requirements.txt  setup.old.py  setup.py  test.sh
.github/: FUNDING.yml  issue_template.md
.github/ISSUE_TEMPLATE/: bug-report-or-feature-request.md
.github/workflows/: build-linux.yml  build-nix.yaml  format.yml  lint.yml
app_source/: core.py
auto_cpufreq/: batteries.py  commands.py  core.py  dialogs.py  globals.py  gnome_power.py  init_system.py  power_helper.py  prints.py  tlp_stat_parser.py  tools.py  types.py  update.py
auto_cpufreq/battery_scripts/: asus.py  battery.py  ideapad  ideapad.py  ideapad_acpi.py  ideapad_laptop.py  shared.py  thinkpad  thinkpad.py
auto_cpufreq/config/: config.py  config_event_handler.py  event_handler.py
auto_cpufreq/dbus/: __init__.py  constants.py  profile_manager.py  (+1 more)
nix/: default.nix  module.nix  shell.nix
scripts/: auto-cpufreq  auto-cpufreq-daemon.sh  auto-cpufreq-deploy.sh  auto-cpufreq-dinit  auto-cpufreq-gtk.desktop  auto-cpufreq-install.sh  auto-cpufreq-openrc  auto-cpufreq-remove.sh  auto-cpufreq-run  auto-cpufreq-runit  auto-cpufreq-sysvinit  auto-cpufreq-venv-wrapper  auto-cpufreq.service  cpufreqctl.sh  daemon-deploy.sh  daemon.sh  org.auto-cpufreq.pkexec.policy  org.freedesktop.UPower.PowerProfiles.conf  run  snapdaemon.sh  start_app  style.css
snap/: snapcraft.yaml
source/: core.py
(+15 files in other folders)
